<resources>
    <string name="app_name">至信协同</string>
    <string name="app_about_us">至信协同办公系统</string>
    <string name="about_us_header">关于</string>
    <string name="about_us_content">地址：山东省日照市烟台北路16号\n电话：8787558</string>
    <string name="button_product_tour">product tour</string>
    <string name="welcom_head_01">Spreadsheets on the go</string>
    <string name="welcom_content_01">Get stuff done with or without an internet connection.</string>
    <string name="welcom_head_02">Share and edit together</string>
    <string name="welcom_content_02">Write on your own or invite more people to contribute.</string>
    <string name="welcom_head_03">Automatically save to the web</string>
    <string name="welcom_content_03">Never lose your progress, so you can keep working from any computer or device.</string>
    <string name="welcom_head_04">Edit Excel spreadsheets</string>
    <string name="welcom_content_04">Open, edit, and save Excel files - all within Sheets.</string>
    <string name="base_back">返回</string>
    <string name="base_submit">提交</string>
    <string name="base_cancel">取消</string>
    <string name="loading_press">请稍候，正在提交...</string>
    <string name="login_posting">正在登录，请稍候...</string>
    <string name="sliding_setting">设置</string>
    <string name="sliding_suggestions">建言献策</string>
    <string name="sliding_feedback">协同反馈</string>
    <string name="sliding_company">公司制度</string>
    <string name="sliding_password">密码设置</string>
    <string name="sliding_mobile">手机号</string>
    <string name="sliding_safe">安全设置</string>
    <string name="sliding_notice">信息通知</string>
    <string name="sliding_clean">清空缓存</string>
    <string name="sliding_exit">退出帐号</string>
    <string name="sliding_head">头像</string>
    <string name="sliding_qr">二维码</string>
    <string name="sliding_qr_my">我的二维码</string>
    <string name="sliding_qr_text">扫描二维码，添加我到通讯录</string>
    <string name="soft_update_no">已经是最新版本</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="account_basic">基本信息</string>
    <string name="account_name">名字</string>
    <string name="account_name_spell">姓名全拼(大写)</string>
    <string name="account_sex">性别</string>
    <string name="account_birthday">生日</string>
    <string name="account_ID">身份证号码</string>
    <string name="account_mobile">手机号码</string>
    <string name="account_short">手机短号</string>
    <string name="account_qq">QQ</string>
    <string name="account_mail">邮件</string>
    <string name="account_education">学历</string>
    <string name="account_position">职务</string>
    <string name="account_department">所属部门</string>
    <string name="account_entry">入职时间</string>
    <string name="account_hometown">故乡</string>
    <string name="account_address">现在住址</string>
    <string name="account_charge">负责人姓名</string>
    <string name="account_relation">与责任人关系</string>
    <string name="account_relation_tell">责任人电话</string>
    <string name="account_communication">通讯</string>
    <string name="account_job">工作</string>
    <string name="account_archives">档案</string>
    <string name="main_daily">日常</string>
    <string name="main_manage">管理</string>
    <string name="main_book">通讯录</string>
    <string name="main_tool">工具</string>
    <string name="daily_title">日常工作</string>
    <string name="manage_title">管理工具</string>
    <string name="book_title">通讯录</string>
    <string name="tool_title">实用工具</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_text">登录</string>
    <string name="login_auto">记住密码</string>
    <string name="login_forget">忘记密码</string>
    <string name="login_hint_username">请输入用户名</string>
    <string name="login_hint_password">请输入密码</string>
    <string name="login_on_loading">正在登录······</string>
    <string name="login_error">用户名或密码错误</string>
    <string name="login_load_success">欢迎您，</string>
    <string name="daily_everyday">每日一报</string>
    <string name="daily_tomorrow">明日计划</string>
    <string name="daily_week">每周计划</string>
    <string name="daily_sign">签到</string>
    <string name="daily_schedule">日程管理</string>
    <string name="daily_mail">邮件管理</string>
    <string name="daily_task">任务管理</string>
    <string name="daily_leave">请假</string>
    <string name="daily_overtime">加班</string>
    <string name="daily_notice">通知</string>
    <string name="daily_add">添加</string>
    <string name="daily_work">日常工作</string>
    <string name="daily_report">每日一报</string>
    <string name="every_add">每日一报</string>
    <string name="every_report_submit">提交日报</string>
    <string name="every_record">日报记录</string>
    <string name="every_chose">选择日期</string>
    <string name="every_attachment">选择附件</string>
    <string name="every_input">请输入内容</string>
    <string name="every_ip">IP:</string>
    <string name="every_add_time">添加时间:</string>
    <string name="tom_plan_add">明日计划</string>
    <string name="tom_plan_record">计划记录</string>
    <string name="tom_plan_date">日期</string>
    <string name="tom_plan_choice">选择日期</string>
    <string name="tom_plan_input">请输入计划内容</string>
    <string name="tom_plan_ip">IP</string>
    <string name="tom_plan_add_time">添加时间</string>
    <string name="tom_plan_state">添加完成情况</string>
    <string name="tom_plan_read">阅读人：</string>
    <string name="tom_plan_read_time">阅读时间</string>
    <string name="weekly_plan_add">每周计划</string>
    <string name="mail_manage">邮件管理</string>
    <string name="mail_received">已收邮件</string>
    <string name="mail_have">已发邮件</string>
    <string name="mail_detail">邮件详情</string>
    <string name="mail_sender">发件人：</string>
    <string name="mail_theme">主题：</string>
    <string name="mail_text">正文：</string>
    <string name="mail_reply">回复</string>
    <string name="mail_forward">转发</string>
    <string name="mail_delete">删除</string>
    <string name="manage_project">项目管理</string>
    <string name="manage_inquiry">询价资产</string>
    <string name="manage_attendance">考勤管理</string>
    <string name="manage_oil">车油管理</string>
    <string name="manage_clientele">客户管理</string>
    <string name="manage_stock">进销存</string>
    <string name="project_new">创建新项目</string>
    <string name="project_no_start">未开始项目</string>
    <string name="project_underway">进行中项目</string>
    <string name="project_known">得知项目</string>
    <string name="project_undetermined">待定项目</string>
    <string name="project_follow">跟进项目</string>
    <string name="project_end">已完结项目</string>
    <string name="project_ensure">确定项目</string>
    <string name="project_lose">丢失项目</string>
    <string name="project_manage_back">管理</string>
    <string name="project_manage_title">项目管理</string>
    <string name="project_name">项目名称</string>
    <string name="project_classify">项目分类</string>
    <string name="project_introduction">项目介绍</string>
    <string name="project_charge">总负责人</string>
    <string name="project_division">项目分工</string>
    <string name="project_message">短信通知</string>
    <string name="project_ensure_add">确认添加</string>
    <string name="search_header">搜</string>
    <string name="address_text">至信</string>
    <string name="address_mail">群发短信</string>
    <string name="leave">请假管理</string>
    <string name="leave_my">我的请假</string>
    <string name="leave_my_add">添加请假</string>
    <string name="leave_pending">待审请假</string>
    <string name="leave_approved">已批请假</string>
    <string name="leave_unapproved">未批请假</string>
    <string name="leave_apply_time">申请时间</string>
    <string name="leave_start_time">开始时间</string>
    <string name="leave_end_time">结束时间</string>
    <string name="leave_time">请假时长</string>
    <string name="leave_reason">请假原因</string>
    <string name="leave_reviewer">审核人</string>
    <string name="leave_status">审核状态</string>
    <string name="leave_reject_reason">未通过原因</string>
    <string name="leave_agreement">同意</string>
    <string name="leave_disagree">不同意</string>
    <string name="leave_add">添加请假</string>
    <string name="leave_reason_hint">请输入请假原因</string>
    <string name="leave_message">发送短信</string>
    <string name="task_not_receive">未接任务</string>
    <string name="task_received">已接任务</string>
    <string name="task_complete">已完任务</string>
    <string name="task_date">日期</string>
    <string name="task_choice_date">选择日期</string>
    <string name="task_describe">任务描述</string>
    <string name="task_attachment">任务附件</string>
    <string name="task_add_attachment">添加附件</string>
    <string name="task_level">任务等级</string>
    <string name="task_general">一般</string>
    <string name="task_important">重要</string>
    <string name="task_handle_state">完/接/总</string>
    <string name="task_creator">添加人</string>
    <string name="task_transactor">办理人</string>
    <string name="task_add">添加任务</string>
    <string name="task_end_time">截止日期</string>
    <string name="task_manage">任务管理</string>
    <string name="task_deadline">任务时限</string>
    <string name="task_receive">接收</string>
    <string name="task_finish">完成</string>
    <string name="task_repost">转发</string>
    <string name="task_receive_time">接收时间</string>
    <string name="task_progress">任务进度</string>
    <string name="task_progress_describe">任务进度描述</string>
    <string name="task_complete_describe">任务完成描述</string>
    <string name="task_unfinished_reason">未及时完成原因</string>
    <string name="task_progress_situation">进度情况</string>
    <string name="task_complete_situation">完成情况</string>
    <string name="task_sms">短信通知</string>
    <string name="task_submit">提交</string>
    <string name="task_clear">清空</string>
    <string name="task_addTime">添加时间:</string>
    <string name="task_endTime">任务时限:</string>
    <string name="task_details_addTime">添加时间:</string>
    <string name="task_details_addUser">添加人：</string>
    <string name="task_details_content">任务详情</string>
    <string name="task_details_attachments">附件</string>
    <string name="task_details_acceptList">已接收人</string>
    <string name="task_details_finishList">已完成人</string>
    <string name="task_details_finishTime">完成时间：</string>
    <string name="task_details">任务详情</string>
    <string name="task_my_add">我添加的任务</string>
    <string name="task_finish_dialog">光荣完成任务</string>
    <string name="extra_header">加班管理</string>
    <string name="tt_manage_header">日程管理</string>
    <string name="tt_manage_"></string>
    <string name="sign_name">姓名</string>
    <string name="sign_time">签到时间</string>
    <string name="sign_ip">签到IP</string>
    <string name="sign_out_time">签退时间</string>
    <string name="late">迟到</string>
    <string name="late_reason">迟到原因</string>
    <string name="leave_earlier">早退</string>
    <string name="leave_earlier_reason">早退原因</string>
    <string name="notice_title">通知</string>
    <string name="notice_item_title">标题：</string>
    <string name="notice_item_time">添加时间：</string>
    <string name="notice_item_addUser">添加人：</string>
    <string name="notice_sign_list">签收列表：</string>
    <string name="notice_details_header">通知详情</string>
    <string name="dialog_title">接收人</string>
    <string name="dialog_select_all">全选</string>
    <string name="dialog_positive">确定</string>
    <string name="dialog_negative">取消</string>
    <string name="location_description">1.签到定位的原点坐标为研发室坐标，签到距离以距离研发室的坐标为基准（分公司暂时无法签到，后续版本会提供解决方案）。\n2. 签到做了位置限制，因GPS网络原因和手机信号问题可能会存在一定的误差，造成无法签到。\n3. 为保证成功签到，请确定本人已到公司并已连接公司内部网络再进行签到。</string>
</resources>