<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/dialog_ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50"
        android:layout_alignParentBottom="true"
        android:paddingBottom="@dimen/dimen_10">

         <Button
            android:id="@+id/bt_dialog_negative"
            style="@style/task_text_size"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_20"
            android:layout_marginRight="@dimen/dimen_10"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_weight="1"
            android:background="@drawable/ripple_negative_button"
            android:text="@string/dialog_negative"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/bt_dialog_positive"
            style="@style/task_text_size"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_20"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_weight="1"
            android:background="@drawable/ripple_button"
            android:text="@string/dialog_positive"
            android:textColor="@color/white" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rl_header"
        android:background="@color/title_bg"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_50">

        <TextView
            android:id="@+id/tv_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/dialog_title"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_dialog_select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/shape_btn_bg"
            android:layout_marginRight="@dimen/dimen_20"
            android:text="@string/dialog_select_all"
            android:textSize="@dimen/dimen_16" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rl_header"
        android:layout_above="@id/dialog_ll_bottom">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_receiver_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </android.support.v7.widget.RecyclerView>
    </LinearLayout>


</RelativeLayout>
