<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <include layout="@layout/activity_header"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            android:id="@+id/project_new"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/selector_ll"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/dimen_5">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_create_projecet"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_new"
                android:textSize="@dimen/dimen_16"
                android:textColor="@color/text_color2"
                android:layout_marginTop="@dimen/dimen_2"/>
        </LinearLayout>
        <View
            android:layout_width="@dimen/dimen_0.5"
            android:layout_height="fill_parent"
            android:background="@color/line_color"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/dimen_5">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_notstart_project"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_no_start"
                android:textSize="@dimen/dimen_16"
                android:textColor="@color/text_color2"
                android:layout_marginTop="@dimen/dimen_2"/>
        </LinearLayout>
        <View
            android:layout_width="@dimen/dimen_0.5"
            android:layout_height="fill_parent"
            android:background="@color/line_color"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/dimen_5">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_ongoing_project"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_underway"
                android:textSize="@dimen/dimen_16"
                android:textColor="@color/text_color2"
                android:layout_marginTop="@dimen/dimen_2"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimen_0.5"
        android:background="@color/line_color"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/dimen_5">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_known_project"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_known"
                android:textSize="@dimen/dimen_16"
                android:textColor="@color/text_color2"
                android:layout_marginTop="@dimen/dimen_2"/>
        </LinearLayout>
        <View
            android:layout_width="@dimen/dimen_0.5"
            android:layout_height="fill_parent"
            android:background="@color/line_color"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/dimen_5">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_pending_project"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_undetermined"
                android:textSize="@dimen/dimen_16"
                android:textColor="@color/text_color2"
                android:layout_marginTop="@dimen/dimen_2"/>
        </LinearLayout>
        <View
            android:layout_width="@dimen/dimen_0.5"
            android:layout_height="fill_parent"
            android:background="@color/line_color"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/dimen_5">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_follow_project"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_follow"
                android:textSize="@dimen/dimen_16"
                android:textColor="@color/text_color2"
                android:layout_marginTop="@dimen/dimen_2"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimen_0.5"
        android:background="@color/line_color"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/dimen_5">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_finished_project"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_end"
                android:textSize="@dimen/dimen_16"
                android:textColor="@color/text_color2"
                android:layout_marginTop="@dimen/dimen_2"/>
        </LinearLayout>
        <View
            android:layout_width="@dimen/dimen_0.5"
            android:layout_height="fill_parent"
            android:background="@color/line_color"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/dimen_5">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_confirm_project"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_ensure"
                android:textSize="@dimen/dimen_16"
                android:textColor="@color/text_color2"
                android:layout_marginTop="@dimen/dimen_2"/>
        </LinearLayout>
        <View
            android:layout_width="@dimen/dimen_0.5"
            android:layout_height="fill_parent"
            android:background="@color/line_color"/>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/dimen_5">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_lost_project"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_lose"
                android:textSize="@dimen/dimen_16"
                android:textColor="@color/text_color2"
                android:layout_marginTop="@dimen/dimen_2"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimen_0.5"
        android:background="@color/line_color"
        android:layout_marginBottom="@dimen/dimen_100"/>
</LinearLayout>