<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/alert_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alert_bg">
    <TextView
        android:id="@+id/dialog_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/leave_add"
        android:textColor="@color/blue_dark"
        android:textSize="@dimen/dimen_18"
        android:padding="@dimen/dimen_10"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimen_0.5"
        android:background="@color/line_color"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_15"
        android:paddingRight="@dimen/dimen_15"
        android:paddingTop="@dimen/dimen_5"
        android:paddingBottom="@dimen/dimen_5"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leave_start_time"
            android:textSize="@dimen/dimen_16"
            android:textColor="@color/text_color2"/>
        <View
            android:layout_width="@dimen/dimen_0.5"
            android:layout_height="@dimen/dimen_10"
            android:background="@color/line_color"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_10"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2015-12-03 8:00"/>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimen_0.5"
        android:background="@color/line_color"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_15"
        android:paddingRight="@dimen/dimen_15"
        android:paddingTop="@dimen/dimen_5"
        android:paddingBottom="@dimen/dimen_5"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leave_end_time"
            android:textSize="@dimen/dimen_16"
            android:textColor="@color/text_color2"/>
        <View
            android:layout_width="@dimen/dimen_0.5"
            android:layout_height="@dimen/dimen_10"
            android:background="@color/line_color"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_10"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2015-12-03 8:00"/>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimen_0.5"
        android:background="@color/line_color"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_15"
        android:paddingRight="@dimen/dimen_15"
        android:paddingTop="@dimen/dimen_5"
        android:paddingBottom="@dimen/dimen_5"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leave_time"
            android:textSize="@dimen/dimen_16"
            android:textColor="@color/text_color2"/>
        <View
            android:layout_width="@dimen/dimen_0.5"
            android:layout_height="@dimen/dimen_10"
            android:background="@color/line_color"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_10"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2015-12-03 8:00"/>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimen_0.5"
        android:background="@color/line_color"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_15"
        android:paddingRight="@dimen/dimen_15"
        android:paddingTop="@dimen/dimen_5"
        android:paddingBottom="@dimen/dimen_5"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leave_reason"
            android:textSize="@dimen/dimen_16"
            android:textColor="@color/text_color2"/>
        <EditText
            android:layout_width="fill_parent"
            android:layout_height="@dimen/dimen_100"
            android:background="@drawable/shape_input"
            android:padding="@dimen/dimen_5"
            android:layout_marginTop="@dimen/dimen_5"
            android:hint="@string/leave_reason_hint"
            android:textColor="@color/text_color2"
            android:textSize="@dimen/dimen_15"
            android:gravity="start"/>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimen_0.5"
        android:background="@color/line_color"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_15"
        android:paddingRight="@dimen/dimen_15"
        android:paddingTop="@dimen/dimen_5"
        android:paddingBottom="@dimen/dimen_5"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leave_reviewer"
            android:textSize="@dimen/dimen_16"
            android:textColor="@color/text_color2"/>
        <View
            android:layout_width="@dimen/dimen_0.5"
            android:layout_height="@dimen/dimen_10"
            android:background="@color/line_color"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_10"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="某某某"/>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimen_0.5"
        android:background="@color/line_color"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/dimen_15"
        android:paddingRight="@dimen/dimen_15"
        android:paddingTop="@dimen/dimen_5"
        android:paddingBottom="@dimen/dimen_5"
        android:gravity="center_vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leave_message"
            android:textSize="@dimen/dimen_16"
            android:textColor="@color/text_color2"/>
        <View
            android:layout_width="@dimen/dimen_0.5"
            android:layout_height="@dimen/dimen_10"
            android:background="@color/line_color"
            android:layout_marginLeft="@dimen/dimen_10"
            android:layout_marginRight="@dimen/dimen_10"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimen_0.5"
        android:background="@color/line_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/alert_cancel"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_weight="1"
            android:background="@drawable/alert_left_btn"
            android:gravity="center"
            android:textColor="@color/steelblue"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/img_line"
            android:layout_width="0.5dp"
            android:layout_height="43dp"
            android:background="@color/line_color" />

        <Button
            android:id="@+id/alert_ensure"
            android:layout_width="wrap_content"
            android:layout_height="43dp"
            android:layout_weight="3"
            android:background="@drawable/alertdialog_right_selector"
            android:gravity="center"
            android:textColor="@color/red"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>